# DEWizardsInTraining2024

./: .gitignore  README.md  client.properties  docker-compose.yml  kafka_jaas.conf  pyproject.toml  zookeeper_jaas.conf
prometheus/: prometheus.yml
python-producer/: produce_fake_data.py
