[tool.poetry]
name = "dewizardsintraining2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = {extras = ["avro"], version = "^2.4.0"}
faker = "^25.2.0"
fastavro = "^1.9.4"
urllib3 = "^2.2.1"
requests = "^2.32.2"
avro = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
